main/objects/Loan__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The physical address of the asset securing the loan</description>
    <inlineHelpText>The physical address of the asset securing the loan</inlineHelpText>
    <label>Security Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>