main/objects/Loan__c/fields/Balance_of_the_Loan__c.field-meta.xml
<CustomField>
    <fullName>Balance_of_the_Loan__c</fullName>
    <description>The sum of the Gross Loan Amount and all associated Loan Charges.</description>
    <formula>Gross_Loan_Amount__c + Total_Charges_on_the_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of the Gross Loan Amount and all associated Loan Charges.</inlineHelpText>
    <label>Current Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>