main/objects/Loan__c/fields/Date_Loan_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Loan_Issued__c</fullName>
    <description>The date the loan was initially issued.</description>
    <inlineHelpText>The date the loan was initially issued.</inlineHelpText>
    <label>Loan Issue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>