main/objects/Loan__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>The duration of the loan in months.</description>
    <inlineHelpText>The duration of the loan in months.</inlineHelpText>
    <label>Loan Term (Months)</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>